# ex-hack

./: .ghci  README.md  default.nix  ex-hack.cabal  exhs.cabal  shell.nix  stack.yaml  todo.txt
.circleci/: config.yml
app/: Cli.hs  Config.hs  Log.hs  Main.hs  ProcessingSteps.hs
img/logo/: README.md
misc/: useful-requests.sql
nix/: cabal-helper.nix  collect-hie-files.nix  ex-hack.nix  ghc-lib-parser.nix  ghc-lib.nix  selda-sqlite.nix
src/: StackageTypes.hs
src/ExHack/: Config.hs  Ghc.hs  ModulePaths.hs  ProcessingSteps.hs  Types.hs  Utils.hs
src/ExHack/Cabal/: Cabal.hs  CabalParser.hs
src/ExHack/Data/: Db.hs
src/ExHack/Hackage/: Hackage.hs
src/ExHack/Renderer/: Html.hs  Types.hs
src/ExHack/Renderer/templates/: header.hamlet  homePage.hamlet  index.html  menu.hamlet  modulePage.hamlet  packagePage.hamlet
src/ExHack/Renderer/templates/static/: style.css
src/ExHack/Stackage/: Stack.hs  StackageParser.hs  StackageTypes.hs
src/Stackage/: StackageParser.hs  StackageTypes.hs
templates/: index.html  module.html  package.html
templates/static/: ex-hack-index.js  style.css
test/ExHack/: CabalSpec.hs  StackageSpec.hs
test/Exhack/: StackageSpec.hs
test/fixtures/: cabal-fixture.cabal
test/integration/ExHack/Hackage/: IntegrationHackageSpec.hs
test/integration/ExHack/Stack/: IntegrationStackSpec.hs
test/integration/fixtures/cabal/: timeit.cabal
test/unit/ExHack/: CabalSpec.hs  ConfigSpec.hs  GhcSpec.hs  ModulePathSpec.hs  StackageSpec.hs
test/unit/fixtures/: config-fixture.yaml  simple.hie  stack-fixture.yaml
