name:           ex-hack
version:        0.1.0.0
description:    Haskell examples database
homepage:       https://github.com/TORELEASE
bug-reports:    https://github.com/TORELEASE
author:         Félix Baylac-Jacqué
maintainer:     felix@alternativebit.fr
copyright:      2018 Félix Baylac-Jacqué
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/TOFILL

library
  hs-source-dirs:
      src
  build-depends:
      ansi-terminal        >= 0.8.0.4,
      base                 >= 4.11,
      blaze-html           >= 0.9.1.1,
      bytestring           >= 0.10.8.2,
      Cabal                >= 2.2,
      cabal-helper         >= 0.8.1,
      containers           >= 0.5.11,
      deepseq              >= 1.4.3,
      directory            >= 1.3.1.5,
      exceptions           >= 0.10,
      file-embed           >= 0.0.10,
      filepath             >= 1.4.2,
      ghc                  >= 8.4.3,
      ghc-paths            >= 0.1,
      hashable             >= 1.2,
      http-client          >= 0.5,
      http-client-tls      >= 0.3,
      lens                 >= 4.17,
      mtl                  >= 2.2,
      network-uri          >= 2.6.1.0,
      process              >= 1.6,
      safe                 >= 0.3,
      selda                >= 0.2 && <0.3,
      selda-sqlite         >= 0.1.6,
      shakespeare          >= 2.0.15,
      tar                  >= 0.5,
      text                 >= 1.2,
      unordered-containers >= 0.2,
      yaml                 >= 0.8,
      zlib                 >= 0.6
  exposed-modules:
      ExHack.Cabal.Cabal,
      ExHack.Cabal.CabalParser,
      ExHack.Data.Db,
      ExHack.Ghc,
      ExHack.Hackage.Hackage,
      ExHack.ModulePaths,
      ExHack.ProcessingSteps,
      ExHack.Renderer.Html,
      ExHack.Renderer.Types,
      ExHack.Stackage.StackageParser,
      ExHack.Stackage.StackageTypes,
      ExHack.Types,
      ExHack.Utils
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable ex-hack
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                 >= 4.11 && <5,
      directory            >= 1.3.1.5,
      ex-hack,
      filepath             >= 1.4.2,
      lens                 >= 4.17,
      optparse-applicative >= 0.14.2.0,
      text                 >= 1.2
  default-language: Haskell2010

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test/unit
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.11 && <5,
      containers,
      ex-hack,
      file-embed >= 0.0.10,
      hspec,
      text
  other-modules:
      ExHack.CabalSpec,
      ExHack.ModulePathSpec,
      ExHack.StackageSpec
  default-language: Haskell2010

test-suite integration-tests
  type: exitcode-stdio-1.0
  main-is: Int.hs
  hs-source-dirs:
      test/integration
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.11 && <5
    , directory
    , ex-hack
    , file-embed
    , filepath
    , hspec
    , text
  other-modules:
      ExHack.Hackage.IntegrationHackageSpec
  default-language: Haskell2010
